--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </ul>
     </p2>
     <div class="media">
+      <a href="https://www.linkedin.com/in/anikalam">
       <img src="LinkedIn-Logos.png" alt="">
+      </a>
     </div>
   </div>
 
